--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -87,3 +87,5 @@ jobs:
       - name: Trigger release workflow
         run: |
           gh workflow run publish.yml
+        env:
+          GH_TOKEN: ${{ github.token }}
