--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,18 +1,14 @@
 name: Publish wheels and conda packages
 
 on:
-  workflow_run:
-    workflows:
-      - Create new release
-    types:
-      - completed
+  repository_dispatch:
+    types: [trigger-release]
 
 permissions:
   contents: read
 
 jobs:
   build:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     name: ${{ matrix.platform.runner }} ${{ matrix.platform.target }} ${{ matrix.platform.manylinux }}
     runs-on: ${{ matrix.platform.runner }}
     strategy:
